add new file input
