# src/flask_ml/flask_ml_server/models.py
@@ -1,12 +1,12 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2024-10-24T01:31:17+00:00
+#   timestamp: 2024-10-31T14:51:26+00:00
 
 from __future__ import annotations
 
 from datetime import datetime
 from enum import Enum
-from typing import Annotated, Any, Dict, List, Optional, Union
+from typing import Annotated, Any, Dict, List, Literal, Optional, Union
 
 from pydantic import BaseModel, ConfigDict, Field, RootModel
 
@@ -92,6 +92,16 @@ class InputType(Enum):
     BATCHFILE = 'batchfile'
     BATCHTEXT = 'batchtext'
     BATCHDIRECTORY = 'batchdirectory'
+
+
+class NewFileInputType(BaseModel):
+    model_config = ConfigDict(
+        populate_by_name=True,
+    )
+    default_name: Annotated[Optional[str], Field(alias='defaultName', examples=['my_file'])] = None
+    default_extension: Annotated[str, Field(alias='defaultExtension', examples=['.db'])]
+    allowed_extensions: Annotated[Union[Literal['*'], List[str]], Field(alias='allowedExtensions')]
+    input_type: Annotated[Optional[Literal['newfile']], Field(alias='inputType')] = 'newfile'
 
 
 class ParameterType(Enum):
@@ -271,7 +281,7 @@ class InputSchema(BaseModel):
     key: str
     label: str
     subtitle: Optional[str] = ''
-    input_type: Annotated[InputType, Field(alias='inputType')]
+    input_type: Annotated[Union[InputType, NewFileInputType], Field(alias='inputType')]
 
 
 class RangedFloatParameterDescriptor(BaseModel):
